--- a/README
+++ b/README
@@ -1,1 +1,2 @@
 Toutes les Expression 2 présente dans ce dossier sont publiques mais je demande que mon nom soit citer pour les partager.
+Toutes les instructions concernant le fonctionnement des Expression 2 sont inscrit dans le code des Expressions.
